<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2014 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  add back to "options_array":
        <item>Sensor Options</item>
  -->
<resources>
    <string-array name="options_array">
        <item>Contact Options</item>
    </string-array>
    <string name="drawer_open">Open options navigation drawer</string>
    <string name="drawer_close">Close options navigation drawer</string>
    <string name="contact_options">Edit Contact information</string>
    <string name="contact_detail">Contact Phone Number</string>
    <string name="sensor_timeout">Seconds to wait after fall</string>
    <string name="service_fail">Sensor service failure, please restart the application</string>
    <string name="action_feedback">Send Feedback</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="fall_message">I have fallen and need help, sent by fall assistant app</string>
    <string name="new_message_notification_title_template">Fall Assistant: %1$s</string>
    <string name="options_message">Fall Assistant configuration options</string>
    <!-- TODO: remove this placeholder text -->
    <string name="notification_text_service_up">The service is %1$s running</string>
    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="saveButtonAcc">Save Button Clicked</string>
    <string name="resetButtonAcc">Settings reset to default</string>
    <string name="title_activity_prefs">PrefsActivity</string>

    <string name="settings_desc">Fall Assistant application settings.\nTouch \"Back\" to return to the main screen</string>
    <string name="action_settings">Settings</string>
</resources>
