<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
    >

    <CheckBox
        android:id="@+id/contact_options_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10px"
        android:paddingTop="10px"
        android:text="@string/contact_options"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact_detail"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sensor_timeout"/>

    <Spinner
        android:id="@+id/settings_wait_timeout_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true"
        />
</LinearLayout>

