<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        style="@style/Widget.SampleMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="false"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/horizontal_page_margin"
        android:layout_marginRight="@dimen/horizontal_page_margin"
        android:text="@string/options_message"/>

    <TextView
        android:id="@+id/ContactPhoneDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignParentStart="false"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.1"
        android:height="20dp"
        android:enabled="false"
        android:text="Contact Phone Number"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <EditText
        android:id="@+id/contactNumText"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentStart="false"
        android:layout_centerVertical="true"
        android:autoLink="phone"
        android:editable="true"
        android:ems="10"
        android:inputType="phone"
        android:text="800-555-1212"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignWithParentIfMissing="false"
        android:layout_below="@+id/textView2"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.2"
        android:height="20dp"
        android:text="Personal Message"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <EditText
        android:id="@+id/persMessageText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/contactNumText"
        android:layout_alignParentStart="false"
        android:layout_gravity="center_horizontal"
        android:autoText="true"
        android:editable="true"
        android:onClick="@string/fall_message"
        android:text="I have fallen and need help, sent by fall assistant app"/>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/restoreDefaultButton"
        android:layout_alignParentStart="false"
        android:layout_marginBottom="57dp"
        android:layout_weight="0.06"
        android:clickable="true"
        android:contentDescription="@string/saveButtonAcc"
        android:longClickable="true"
        android:paddingBottom="@dimen/vertical_page_margin"
        android:paddingTop="@dimen/vertical_page_margin"
        android:text="Save"/>

    <Button
        android:id="@+id/restoreDefaultButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="false"
        android:layout_gravity="right"
        android:layout_marginBottom="38dp"
        android:layout_weight="0.10"
        android:clickable="true"
        android:contentDescription="@string/resetButtonAcc"
        android:enabled="true"
        android:paddingBottom="@dimen/vertical_page_margin"
        android:paddingTop="@dimen/vertical_page_margin"
        android:singleLine="true"
        android:text="Restore Defaults"/>

</LinearLayout>
